# fft-convolution

./: Cargo.toml  Jenkinsfile  LICENSE  README.md  sideband_energy.json  sideband_energy_results.csv
.github/workflows/: main.yml
benches/: convolution_bench.rs
resources/: response_0_100.txt  response_0_200.txt  response_0_50.txt  response_1.txt  response_1_200.txt  response_1_50.txt
src/: crossfade_convolver.rs  crossfade_convolver_fd.rs  crossfade_convolver_td.rs  crossfader.rs  faded_stepwise_update_convolver.rs  fft_convolver.rs  lib.rs  stepwise_update_convolver.rs  tests.rs  time_varying_convolver.rs
src/evaluation/: mod.rs  sideband_energy.rs
