[package]
name = "convolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
realfft = "3.3.0"
rustfft = "6.1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
[[bench]]
name = "convolution_bench"
harness = false
